--- a/Pagina-Formulario/style.css
+++ b/Pagina-Formulario/style.css
@@ -19,7 +19,7 @@ div{
 body {
     font-size:x-large;
     text-align: center;
-    background-image: linear-gradient(to top, #30cfd0 0%, #330867 100%);
+    background-image: linear-gradient(15deg, #13547a 0%, #80d0c7 100%);
 }
 fieldset { 
     border:1px solid lightgray;
@@ -29,5 +29,5 @@ legend {
     font-weight: 700;
 }
 h1{
-    color: rgb(255, 255, 255);
+    color: rgb(0, 0, 0);
 }
