--- a/Pagina-Formulario/style.css
+++ b/Pagina-Formulario/style.css
@@ -19,7 +19,7 @@ div{
 body {
     font-size:x-large;
     text-align: center;
-    background-image: linear-gradient(15deg, #13547a 0%, #80d0c7 100%);
+    background-image: linear-gradient(120deg, #a1c4fd 0%, #c2e9fb 100%);
 }
 fieldset { 
     border:1px solid lightgray;
