--- a/Pagina-Formulario/style.css
+++ b/Pagina-Formulario/style.css
@@ -19,7 +19,7 @@ div{
 body {
     font-size:x-large;
     text-align: center;
-    background-image: linear-gradient(120deg, #a1c4fd 0%, #c2e9fb 100%);
+    background-image: linear-gradient(to top, #505285 0%, #585e92 12%, #65689f 25%, #7474b0 37%, #7e7ebb 50%, #8389c7 62%, #9795d4 75%, #a2a1dc 87%, #b5aee4 100%);
 }
 fieldset { 
     border:1px solid lightgray;
