--- a/Site-Parallax/style.css
+++ b/Site-Parallax/style.css
@@ -155,3 +155,19 @@ a:active{
 	opacity: 0.5;
 	text-decoration: none;
 }
+
+.blink {
+	animation: blink 1s steps(1, end) infinite;
+  }
+  
+  @keyframes blink {
+	0% {
+	  opacity: 1;
+	}
+	50% {
+	  opacity: 0;
+	}
+	100% {
+	  opacity: 1;
+	}
+  }
