Alteração do arquivo style.css do projeto Pagina-Login. Por Joao Wesley.

--- a/Pagina-Login/style.css
+++ b/Pagina-Login/style.css
@@ -6,7 +6,7 @@
   
   body{
     height: 1000px;
-    background-image: url("https://wallpaperaccess.com/full/1216414.jpg");
+    background-image: url("imagens/imagendefundo.jpg");
 
   }
   
