--- a/Portifolio-Pessoal/style.css
+++ b/Portifolio-Pessoal/style.css
@@ -157,7 +157,13 @@
     background-color: #000;
     background-image: linear-gradient(62deg, #3a3d40 0%, #181719 100%);
   }
-  
+
+  .integrantes {
+    width: 100%;
+    height: 100vh;
+    background: var(--main-blue);
+  }
+
   .welcome-section > p {
     font-size: 3rem;
     font-weight: 200;
