--- a/Catalogo-de-Produtos/style.css
+++ b/Catalogo-de-Produtos/style.css
@@ -6,8 +6,8 @@ html {
 *, *:before, *:after {
   box-sizing: inherit;
 }
-body, h1, h2, h3, h4, h5, h6 {
-  font-family: 'Raleway', sans-serif;
+body, h1, h2, h3, h4, h5, h6, p{
+  font-family:'Times New Roman', Times, serif;
   margin: 0;
   padding: 0;
   font-weight: 100;
@@ -20,7 +20,7 @@ ol, ul {
 }
 
 h1 {
-  font-size: 50px;
+  font-size: 200px;
 }   
 
 h2 {
@@ -29,7 +29,7 @@ h2 {
 
 a {
     text-decoration: none;
-    color: black;
+    color: rgb(255, 255, 255);
   }
   .div-nav{
     display:block;
@@ -57,7 +57,7 @@ a {
     
     height: 75px;
     width: 100%;
-    background-color: rgb(255, 0, 0);
+    background-color: #0B2447;
     z-index: 10;
     border: none;
   }
@@ -91,6 +91,37 @@ a {
   .nav-list a:hover {
     background: none;
   }
+  
+  .nav-list2 {
+    display: flex;
+    justify-self: flex-end;
+    margin-right: 1rem;
+    list-style: none;
+    align-items: center;
+
+  }
+  
+  @media (max-width: 28.75em) {
+    .nav {
+      justify-content: center;
+    }
+  
+    .nav-list2 {
+      margin: 0 1rem;
+    }
+  }
+  
+  .nav-list2 a {
+    color: #ffffff;
+    display: block;
+    font-size: 1.5rem;
+    padding: 1rem;
+  }
+  
+  .nav-list2 a:hover {
+    background: none;
+  }
+
 
   #logo{
     height: 75px;
@@ -129,20 +160,13 @@ a {
   
   .welcome-section {
     display: flex;
-    flex-direction: column;
     justify-content: center;
     align-items: center;
     width: 100%;
     height: 100vh;
-    background-color: rgb(255, 255, 255);
+    background-color: #ffffff;
   }
   
-  .welcome-section > p {
-    font-size: 2rem;
-    font-weight: 100;
-    font-style: italic;
-  }
-
   
   img {
     max-width: 100%;
@@ -157,7 +181,7 @@ a {
 }
 
 .container h2{
-    background: #0062cc;
+    background: #19376D;
     color: #FFFFFF;
     width: 300px;
     font-size: 24px;
@@ -167,13 +191,14 @@ a {
 
 .container h2::after{
     content: '';
-    border-top: 40px solid #0062cc;
+    border-top: 40px solid #19376D;
     border-right: 40px solid transparent;
     position: relative;
     left: 55px;
     top: 35px;
 
 }
+
 
 .row{
     margin-top: 30px;
