--- a/Pagina-de-Noticias/style.css
+++ b/Pagina-de-Noticias/style.css
@@ -231,3 +231,19 @@
       grid-column-end: span 3;
       grid-row-end: span 4;
   }
+
+  .contact-section {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    text-align: center;
+    width: 100%;
+    height: 80vh;
+    padding: 0 2rem;
+    background: var(--main-gray);
+  }
+  
+  .contact-section-header > h2 {
+    font-size: 6rem;
+  }
