--- a/Pagina-de-Noticias/style.css
+++ b/Pagina-de-Noticias/style.css
@@ -1,6 +1,6 @@
 body{
     background-color:#1b1b1b;
-    font-family: sans-serif;
+    font-family:'Times New Roman', Times, serif;
     margin: auto;
   }
   
@@ -8,12 +8,19 @@ body{
     text-decoration:none;
     color:inherit;
   }
+  footer{
+    display: flex;
+    flex-direction: column;
+    text-align: center;
+    color: white;
+    font-size: 1.5em;
+  }
   
   .cabecalho_pagina{
     box-sizing:border-box;
     height:160px;
     background-color:#000000;
-    color:white;
+    color:rgb(255, 255, 255);
     padding:32px;
     margin-bottom:16px;
     display:flex;
@@ -26,6 +33,7 @@ body{
     flex-direction:column;
     justify-content:flex-end;
   }
+
   
   .card{
     background-color:white;
@@ -227,4 +235,33 @@ body{
   .span-3 {
       grid-column-end: span 3;
       grid-row-end: span 4;
+  }
+  
+  .contact-section {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    text-align: center;
+    width: 100%;
+    height: 30vh;
+    padding: 0 2rem;
+    background: var(--main-gray);
+  }
+  
+  .contact-section-header > h2 {
+    font-size: 6rem;
+  }
+  
+  @media (max-width: 28.75em) {
+    .contact-section-header > h2 {
+      font-size: 4rem;
+    }
+  }
+  
+  .contact-section-header > p {
+    font-style: italic;
+  }
+  .contact-links a{
+    color: white;
   }
