--- a/Catalogo-de-Produtos/style.css
+++ b/Catalogo-de-Produtos/style.css
@@ -31,6 +31,7 @@ a {
     text-decoration: none;
     color: rgb(255, 255, 255);
   }
+  
   .div-nav{
     display:block;
   }
@@ -65,6 +66,7 @@ a {
   .nav-list {
     display: flex;
     justify-self: flex-end;
+    margin: auto;
     margin-right: 1rem;
     list-style: none;
     align-items: center;
@@ -77,7 +79,7 @@ a {
     }
   
     .nav-list {
-      margin: 0 1rem;
+      margin: auto;
     }
   }
   
@@ -90,11 +92,13 @@ a {
   
   .nav-list a:hover {
     background: none;
+    text-decoration: none;
   }
   
   .nav-list2 {
     display: flex;
     justify-self: flex-end;
+    margin: auto;
     margin-right: 1rem;
     list-style: none;
     align-items: center;
@@ -120,12 +124,24 @@ a {
   
   .nav-list2 a:hover {
     background: none;
+    text-decoration: none;
   }
 
 
-  #logo{
+  .logo{
+    position: relative;
+    left: 0;
     height: 75px;
     width: 300px;
+    text-align: center;
+    align-items: center;
+
+  }
+  .logo a{
+    font-size: 1.5rem;
+  }
+  .logo a:hover{
+    text-decoration: none;
   }
 
   #divBusca{
@@ -153,6 +169,7 @@ a {
   #login{
     right: 0;
     justify-self: flex-end;
+    text-align: center;
   }
   #nav2{
     align-self: center;
@@ -191,7 +208,7 @@ a {
 
 .container h2::after{
     content: '';
-    border-top: 40px solid #19376D;
+    border-top: 0px solid #19376D;
     border-right: 40px solid transparent;
     position: relative;
     left: 55px;
