--- a/Catalogo-de-Produtos/style.css
+++ b/Catalogo-de-Produtos/style.css
@@ -1,40 +1,82 @@
 html {
-  box-sizing: border-box;
-  font-size: 16px;
+    box-sizing: border-box;
+    font-size: 16px;
 }
 
-*, *:before, *:after {
-  box-sizing: inherit;
-}
-body, h1, h2, h3, h4, h5, h6, p{
-  font-family:'Times New Roman', Times, serif;
-  margin: 0;
-  padding: 0;
-  font-weight: 100;
-  background-color: rgb(255, 255, 255);
-  text-align: center;
+*,
+*:before,
+*:after {
+    box-sizing: inherit;
 }
 
-ol, ul {
-  list-style: none;
+body,
+h1,
+h2,
+h3,
+h4,
+h5,
+h6,
+p {
+    font-family: 'Times New Roman', Times, serif;
+    margin: 0;
+    padding: 0;
+    font-weight: 100;
+    background-color: rgb(255, 255, 255);
+    text-align: center;
+}
+
+ol,
+ul {
+    list-style: none;
+}
+
+
+/* subitens */
+
+li ul {
+    display: none;
+    position: absolute;
+    background-color: #333;
+}
+
+li:hover ul {
+    display: block;
+}
+
+li ul li {
+    float: none;
+    border-top: 1px solid #bbb;
+    border-bottom: 1px solid #bbb;
+    position: relative;
+}
+
+li ul li a {
+    padding: 10px 16px;
+    text-align: center;
+}
+
+li ul ul {
+    position: absolute;
+    top: 0;
+    left: 100%;
 }
 
 h1 {
-  font-size: 200px;
-}   
+    font-size: 200px;
+}
 
 h2 {
-  font-size: 4.2rem;
+    font-size: 4.2rem;
 }
 
 a {
     text-decoration: none;
     color: rgb(255, 255, 255);
-  }
-  
-  .div-nav{
-    display:block;
-  }
+}
+
+.div-nav {
+    display: block;
+}
 
 #nav {
     display: flex;
@@ -42,162 +84,221 @@ a {
     position: fixed;
     top: 0;
     left: 0;
-    
     height: 75px;
     width: 100%;
     background-color: rgb(255, 255, 255);
     z-index: 10;
     border: none;
-  }
-  #nav2{
+}
+
+#nav2 {
     display: flex;
     justify-content: flex-end;
     position: fixed;
     top: 75px;
     left: 0;
-    
     height: 75px;
     width: 100%;
     background-color: #0B2447;
     z-index: 10;
     border: none;
-  }
-  
-  .nav-list {
+}
+
+.nav-list {
     display: flex;
     justify-self: flex-end;
     margin: auto;
     margin-right: 1rem;
     list-style: none;
     align-items: center;
+}
 
-  }
-  
-  @media (max-width: 28.75em) {
+@media (max-width: 28.75em) {
     .nav {
-      justify-content: center;
+        justify-content: center;
     }
-  
     .nav-list {
-      margin: auto;
+        margin: auto;
     }
-  }
-  
-  .nav-list a {
+}
+
+.nav-list a {
     color: #000000;
     display: block;
     font-size: 1.5rem;
     padding: 1rem;
-  }
-  
-  .nav-list a:hover {
+}
+
+.nav-list a:hover {
     background: none;
     text-decoration: none;
-  }
-  
-  .nav-list2 {
+}
+
+.nav-list2 {
     display: flex;
     justify-self: flex-end;
     margin: auto;
     margin-right: 1rem;
     list-style: none;
     align-items: center;
+}
 
-  }
-  
-  @media (max-width: 28.75em) {
+@media (max-width: 28.75em) {
     .nav {
-      justify-content: center;
+        justify-content: center;
     }
-  
     .nav-list2 {
-      margin: 0 1rem;
+        margin: 0 1rem;
     }
-  }
-  
-  .nav-list2 a {
+}
+
+.nav-list2 a {
     color: #ffffff;
     display: block;
     font-size: 1.5rem;
     padding: 1rem;
-  }
-  
-  .nav-list2 a:hover {
-    background: none;
+    border-radius: 5px;
+}
+
+.nav-list2 a:hover {
+    background: #19376D;
     text-decoration: none;
-  }
+    color: #ffffff;
+}
 
-
-  .logo{
+.logo {
     position: relative;
     left: 0;
     height: 75px;
     width: 300px;
     text-align: center;
     align-items: center;
+}
 
-  }
-  .logo a{
+.logo a {
     font-size: 1.5rem;
-  }
-  .logo a:hover{
+}
+
+.logo a:hover {
     text-decoration: none;
-  }
+}
 
-  #divBusca{
-    background-color:transparent;
-    border:solid 1px;
-    border-radius:15px;
-    width:300px;
-  }
-  
-  #txtBusca{
-    float:right;
-    background-color:transparent;
-    padding-left:5px;
-    font-style:italic;
-    font-size:18px;
-    border:none;
-    border-radius:15px;
-    height:32px;
-    width:260px;
-  }
-  #divNav{
+#divBusca {
+    background-color: transparent;
+    border: solid 1px;
+    border-radius: 15px;
+    width: 300px;
+}
+
+#txtBusca {
+    float: right;
+    background-color: transparent;
+    padding-left: 5px;
+    font-style: italic;
+    font-size: 18px;
+    border: none;
+    border-radius: 15px;
+    height: 32px;
+    width: 260px;
+}
+
+#divNav {
     justify-content: flex-end;
+}
 
-  }
-  #login{
+#login {
     right: 0;
     justify-self: flex-end;
     text-align: center;
-  }
-  #nav2{
+}
+
+.carro-compras {
+    display: inline-block;
+    position: relative;
+}
+
+.carro-compras span {
+    width: 20px;
+    height: 20px;
+    border-radius: 50%;
+    background-color: #19376D;
+    color: white;
+    text-align: center;
+    font-size: 14px;
+    line-height: 20px;
+    position: absolute;
+    top: -5px;
+    left: -5px;
+}
+
+.subitens {
+    background-color: white;
+    border: 1px solid #6b6b6b;
+    border-radius: 5px;
+    position: absolute;
+    top: 90px;
+}
+
+.status-da-pagina {
+    position: relative;
+    top: 150px;
+    left: 50px;
+}
+
+.status-da-pagina a {
+    display: inline;
+    vertical-align: center;
+    position: relative;
+    left: 5px;
+    text-decoration: none;
+}
+
+.status-da-pagina a:hover {
+    text-decoration: none;
+}
+
+#nav2 {
     align-self: center;
-  }
-  
-  .welcome-section {
+}
+
+.welcome-section {
     display: flex;
     justify-content: center;
     align-items: center;
     width: 100%;
     height: 100vh;
     background-color: #ffffff;
-  }
-  
-  
-  img {
+}
+
+.produtos {
+    display: flex;
+}
+
+.menu-lateral {
+    width: 20%;
+    height: 50%;
+    margin-top: 10%;
+    border: 1px solid lightgray;
+    border-radius: 5px;
+    box-shadow: 2px 2px 5px lightgray;
+}
+
+img {
     max-width: 100%;
     height: auto;
-  }
+}
+
+
 /* Não recomendo que altere as linha de cima deste comentário, ela é o que chamados de Reset CSS */
-.container{
-    width: 100%;
+
+.container {
+    width: 80%;
     margin-top: 10%;
     font-family: sans-serif;
     letter-spacing: 1px;
 }
 
-.container h2{
+.container h2 {
     background: #19376D;
     color: #FFFFFF;
     width: 300px;
@@ -206,41 +307,40 @@ a {
     height: 40px;
 }
 
-.container h2::after{
+.container h2::after {
     content: '';
     border-top: 0px solid #19376D;
     border-right: 40px solid transparent;
     position: relative;
     left: 55px;
     top: 35px;
-
 }
 
-
-.row{
+.row {
     margin-top: 30px;
 }
 
-.produto-bot .fa{
+.produto-bot .fa {
     color: gold;
     font-size: 13px;
 }
 
-.produto-bot .far{
+.produto-bot .far {
     color: gold;
     font-size: 13px;
 }
 
-.produto-bot h3{
+.produto-bot h3 {
     font-size: 20px;
     font-weight: bold;
 }
-.produto-bot h5{
+
+.produto-bot h5 {
     font-size: 13px;
     padding-bottom: 10px;
 }
 
-.overlay{
+.overlay {
     display: block;
     opacity: 0;
     position: absolute;
@@ -249,13 +349,13 @@ a {
     width: 70px;
 }
 
-.produto-top:hover .overlay{
+.produto-top:hover .overlay {
     opacity: 1;
     margin-left: 5%;
     transition: 0.5s;
 }
 
-.overlay .fa{
+.overlay .fa {
     cursor: pointer;
     color: #000000;
     background-color: #555555;
@@ -267,7 +367,44 @@ a {
     margin-bottom: 5%;
 }
 
-.overlay .btn-secondary{
+.overlay .btn-secondary {
     border: none !important;
     box-shadow: none;
+}
+
+.icon {
+    position: fixed;
+    bottom: 10px;
+    right: 10px;
+    width: 50px;
+    height: 50px;
+    background-color: white;
+    border-radius: 50%;
+    cursor: pointer;
+}
+
+.sub-icons {
+    position: absolute;
+    bottom: 60px;
+    right: 5px;
+    display: none;
+}
+
+.sub-icons .icon {
+    margin-bottom: 50px;
+}
+
+.sub-icons .icon:nth-child(1) {
+    background-color: white;
+    margin-bottom: 55px;
+}
+
+.sub-icons .icon:nth-child(2) {
+    background-color: white;
+    margin-bottom: 110px;
+}
+
+.sub-icons .icon:nth-child(3) {
+    background-color: white;
+    margin-bottom: 165px;
 }
