--- a/Catalogo-de-Produtos/style.css
+++ b/Catalogo-de-Produtos/style.css
@@ -39,15 +39,14 @@ li ul {
     background-color: #333;
 }
 
-li:hover ul {
-    display: block;
-}
+
 
 li ul li {
     float: none;
     border-top: 1px solid #bbb;
     border-bottom: 1px solid #bbb;
     position: relative;
+    right: 15px;
 }
 
 li ul li a {
@@ -93,7 +92,7 @@ a {
 
 #nav2 {
     display: flex;
-    justify-content: flex-end;
+    justify-content: center;
     position: fixed;
     top: 75px;
     left: 0;
@@ -106,7 +105,7 @@ a {
 
 .nav-list {
     display: flex;
-    justify-self: flex-end;
+    justify-content: center;
     margin: auto;
     margin-right: 1rem;
     list-style: none;
@@ -136,7 +135,8 @@ a {
 
 .nav-list2 {
     display: flex;
-    justify-self: flex-end;
+    justify-self:center;
+    justify-content: center;
     margin: auto;
     margin-right: 1rem;
     list-style: none;
@@ -159,11 +159,17 @@ a {
     padding: 1rem;
     border-radius: 5px;
 }
+.nav-list2 li:hover ul {
+    display: flex;
+    flex-direction: column;
+}
 
 .nav-list2 a:hover {
     background: #19376D;
     text-decoration: none;
-    color: #ffffff;
+    color: #FFFFFF;
+    font-size: 1.6rem;
+    box-shadow: 2px 2px 5px #ffffff;
 }
 
 .logo {
@@ -236,7 +242,17 @@ a {
     border: 1px solid #6b6b6b;
     border-radius: 5px;
     position: absolute;
-    top: 90px;
+    top: 72px;
+}
+
+.subitens a:hover {
+    background: white;
+    font-size: 1.5rem;
+    box-shadow: 0 0;
+}
+
+.subitens li:hover ul {
+    display: block;
 }
 
 .status-da-pagina {
@@ -272,17 +288,51 @@ a {
 
 .produtos {
     display: flex;
-}
+    flex-wrap: wrap;
 
+}
 .menu-lateral {
+    display: block;
     width: 20%;
     height: 50%;
     margin-top: 10%;
-    border: 1px solid lightgray;
-    border-radius: 5px;
-    box-shadow: 2px 2px 5px lightgray;
-}
-
+  
+  }
+  .sub-menu-lateral {
+      width: 100%;
+      height: 50%;
+      margin-top: 0;
+      margin-bottom: 10%;
+      border: 1px solid lightgray;
+      border-radius: 5px;
+      box-shadow: 2px 2px 5px lightgray;
+      position: relative;
+      left: 50px;
+  
+  }
+  .sub-menu-lateral h2 {
+    background: #19376D;
+    color: #FFFFFF;
+    width: 90%;
+    height: 40px;
+    font-size: 24px;
+    padding: 5px;
+    margin-left: 10px;
+    border-radius: 3px;
+  }
+  
+  .sub-menu-lateral li:hover {
+    margin-left: 10px;
+  }
+  .sub-menu-lateral ul hr {
+    width: 80%;
+    margin-left: 0;
+  }
+  .sub-menu-lateral hr {
+    width: 90%;
+    margin-left: 10px;
+  }
+  
 img {
     max-width: 100%;
     height: auto;
@@ -305,6 +355,7 @@ img {
     font-size: 24px;
     padding: 5px;
     height: 40px;
+    border-radius: 3px;
 }
 
 .container h2::after {
@@ -317,7 +368,15 @@ img {
 }
 
 .row {
+    display: flex;
+    justify-self:center;
+    justify-content: space-around;
+    flex-wrap: nowrap;
     margin-top: 30px;
+}
+.produto {
+    position: relative;
+    width: 25%;
 }
 
 .produto-bot .fa {
@@ -407,4 +466,29 @@ img {
 .sub-icons .icon:nth-child(3) {
     background-color: white;
     margin-bottom: 165px;
+}
+
+#quadrado {
+    position: fixed;
+    bottom: 10px;
+    left: 10px;
+    width: 30px;
+    height: 30px;
+    background-color: #19376D;
+    border-radius: 5px;
+    align-items: center;
+    padding: 0px;
+    cursor: pointer;
+    transition: all 0.5s ease-in-out;
+}
+#quadrado:hover {
+    background-color: #2c446e;
+}
+#quadrado p {
+    vertical-align: center;
+    margin-top: 4px;
+    background: transparent;
+    color: white;
+    font-size: 20px;
+    font-weight: bold;
 }
