--- a/Catalogo-de-Produtos/style.css
+++ b/Catalogo-de-Produtos/style.css
@@ -30,36 +30,6 @@ ul {
     list-style: none;
 }
 
-
-/* subitens */
-
-li ul {
-    display: none;
-    position: absolute;
-    background-color: #333;
-}
-
-
-
-li ul li {
-    float: none;
-    border-top: 1px solid #bbb;
-    border-bottom: 1px solid #bbb;
-    position: relative;
-    right: 15px;
-}
-
-li ul li a {
-    padding: 10px 16px;
-    text-align: center;
-}
-
-li ul ul {
-    position: absolute;
-    top: 0;
-    left: 100%;
-}
-
 h1 {
     font-size: 200px;
 }
@@ -86,19 +56,6 @@ a {
     height: 75px;
     width: 100%;
     background-color: rgb(255, 255, 255);
-    z-index: 10;
-    border: none;
-}
-
-#nav2 {
-    display: flex;
-    justify-content: center;
-    position: fixed;
-    top: 75px;
-    left: 0;
-    height: 75px;
-    width: 100%;
-    background-color: #0B2447;
     z-index: 10;
     border: none;
 }
@@ -131,63 +88,44 @@ a {
 .nav-list a:hover {
     background: none;
     text-decoration: none;
-}
-
-.nav-list2 {
-    display: flex;
-    justify-self:center;
-    justify-content: center;
-    margin: auto;
-    margin-right: 1rem;
-    list-style: none;
-    align-items: center;
-}
-
-@media (max-width: 28.75em) {
-    .nav {
-        justify-content: center;
-    }
-    .nav-list2 {
-        margin: 0 1rem;
-    }
-}
-
-.nav-list2 a {
-    color: #ffffff;
-    display: block;
-    font-size: 1.5rem;
-    padding: 1rem;
-    border-radius: 5px;
-}
-.nav-list2 li:hover ul {
-    display: flex;
-    flex-direction: column;
-}
-
-.nav-list2 a:hover {
-    background: #19376D;
-    text-decoration: none;
-    color: #FFFFFF;
-    font-size: 1.6rem;
-    box-shadow: 2px 2px 5px #ffffff;
+    color: black;
 }
 
 .logo {
     position: relative;
-    left: 0;
-    height: 75px;
-    width: 300px;
+    top: 10px;
+    left: 50px;
+    height: 55px;
+    width: 200px;
+    border-radius: 5px;
     text-align: center;
     align-items: center;
 }
 
 .logo a {
     font-size: 1.5rem;
+
+}
+.logo:hover {
+    background-color: rgb(221, 221, 221);
 }
 
 .logo a:hover {
+    color: black;
     text-decoration: none;
 }
+#logo-phone {
+    display: none;
+  }
+  @media only screen and (max-width: 450px) {
+    #logo-pc {
+      display: none;
+    }
+    #logo-phone {
+      display: block;
+    }
+  }
+  
 
 #divBusca {
     background-color: transparent;
@@ -207,15 +145,49 @@ a {
     height: 32px;
     width: 260px;
 }
+@media only screen and (max-width: 450px) {
+    #divBusca {
+      width: 100px;
+      border-radius: 5px;
+  }
+    #txtBusca {
+      width: 90px;
+      border-radius: 5px;
+    }
+  
+  
+  }
 
 #divNav {
     justify-content: flex-end;
 }
 
-#login {
-    right: 0;
-    justify-self: flex-end;
-    text-align: center;
+.login {
+    position: relative;
+    top: 5px;
+    height: 55px;   
+    margin: 0; 
+    padding: 0;
+    border-radius: 5px;
+}
+.login a {
+    position: relative;
+    top: -14px;
+}
+.login:hover {
+    background-color: rgb(221, 221, 221);
+}
+
+#login-phone {
+    display: none;
+}
+@media only screen and (max-width: 450px) {
+    #login-pc {
+        display: none;
+    }
+    #login-phone{
+        display: block;
+    }
 }
 
 .carro-compras {
@@ -238,26 +210,66 @@ a {
 }
 
 .subitens {
+    display: none;
     background-color: white;
     border: 1px solid #6b6b6b;
     border-radius: 5px;
-    position: absolute;
-    top: 72px;
+    position: relative;
+    top: -10px;
 }
-
-.subitens a:hover {
-    background: white;
-    font-size: 1.5rem;
-    box-shadow: 0 0;
+.item:hover .subitens {
+  display: block;
 }
-
-.subitens li:hover ul {
-    display: block;
+.subitens li {
+  border-top: 1px solid gray;
+  border-bottom: 1px solid gray;
+  color: black;
+  padding: 1rem;
+  font-size: 1rem;
+  position: relative;
+  left: -15px;
+  
+}
+.nav3 {
+  display: block;
+  background-color: #0B2447;
+  position: fixed;
+  top: 75px;
+  width: 100%;
+  height: 90px;
+  z-index: 10;
+}
+.nav-list3 {
+  display: flex;
+  justify-self:center;
+  justify-content: space-around;
+  width: 100%;
+}
+.item {
+  display: block;
+  color: white;
+  font-size: 1.5rem;
+  height: 85px;
+  border-radius: 5px;
+}
+.item a {
+  display: block;
+  text-align: center;
+  padding: 1rem;
+}
+.item a:hover {
+  color: white;
+  text-decoration: none;
+}
+.item:hover {
+  background-color: #19376D;
+  font-size: 1.5rem;
+  box-shadow: 2px 2px 5px #FFFFFF;
 }
 
 .status-da-pagina {
     position: relative;
-    top: 150px;
+    top: 170px;
     left: 50px;
 }
 
@@ -271,10 +283,6 @@ a {
 
 .status-da-pagina a:hover {
     text-decoration: none;
-}
-
-#nav2 {
-    align-self: center;
 }
 
 .welcome-section {
