--- a/Portifolio-Pessoal/style.css
+++ b/Portifolio-Pessoal/style.css
@@ -1,9 +1,9 @@
 /* Custom properties/variables  */
 :root {
     --main-white: #f0f0f0;
-    --main-red: #a714bb;
-    --main-blue: #45567d;
-    --main-gray: #303841;
+    --main-red: #45567d;
+    --main-blue: #303841;
+    --main-gray: #45567d;
   }
   
   /* Base reset */
@@ -296,7 +296,7 @@
     width: 100%;
     height: 80vh;
     padding: 0 2rem;
-    background: var(--main-gray);
+    background: black;
   }
   
   .contact-section-header > h2 {
@@ -340,7 +340,7 @@
     display: flex;
     justify-content: space-evenly;
     padding: 2rem;
-    background: var(--main-gray);
+    background: var(--main-blue);
     border-top: 4px solid var(--main-red);
   }
   
